--- a/Source/RazorClassLibrary/RazorClassLibrary.csproj
+++ b/Source/RazorClassLibrary/RazorClassLibrary.csproj
@@ -6,6 +6,9 @@
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <IntermediateOutputPath>obj</IntermediateOutputPath>
     </PropertyGroup>
+    <PropertyGroup>
+        <TailwindBuild>true</TailwindBuild>
+    </PropertyGroup>
     <ItemGroup>
         <SupportedPlatform Include="browser" />
     </ItemGroup>
@@ -23,9 +26,8 @@
         <Exec Command="npm install" />
         <Touch Files="../../node_modules/.install-stamp" AlwaysCreate="true" />
     </Target>
-    <!-- 'tailwind build' can be commented/deleted if you're using VS Code & the run/debug configs -->
-    <Target Name="tailwind build" AfterTargets="AfterBuild">
+    <Target Name="tailwind build" AfterTargets="AfterBuild" Condition="'$(TailwindBuild)' == 'true'">
+        <Message Text="tailwind build target running..." Importance="high"></Message>
         <Exec Command="npm run build-wasm" Condition="'$(Configuration)' == 'Debug'"/>
-        <!-- <Exec Command="npm run build-server" Condition="'$(Configuration)' == 'Debug'"/> -->
     </Target>
 </Project>
