--- a/Source/BlazorServer/BlazorServer.csproj
+++ b/Source/BlazorServer/BlazorServer.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <Nullable>Enable</Nullable>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>TailBlazor.BlazorServer</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
