--- a/Source/BlazorWasm/BlazorWasm.csproj
+++ b/Source/BlazorWasm/BlazorWasm.csproj
@@ -6,9 +6,9 @@
         <RootNamespace>TailBlazor.BlazorWasm</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-rc.1.21452.15" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-rc.1.21452.15" PrivateAssets="all" />
-        <PackageReference Include="System.Net.Http.Json" Version="6.0.0-rc.1.21451.13" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-rc.2.*" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-rc.2.*" PrivateAssets="all" />
+        <PackageReference Include="System.Net.Http.Json" Version="6.0.0-rc.2.*" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\RazorClassLibrary\RazorClassLibrary.csproj" />
