--- a/Source/package.json
+++ b/Source/package.json
@@ -4,7 +4,7 @@
   "description": "template for using tailwind css in jit mode with blazor projects",
   "devDependencies": {
     "postcss-import": "^14.0.1",
-    "tailwindcss": "^2.2.15"
+    "tailwindcss": "^3.0.0-alpha.1"
   },
   "scripts": {
     "build-wasm": "npx tailwindcss --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./BlazorWasm/wwwroot/site.min.css",
