--- a/Source/RazorClassLibrary/RazorClassLibrary.csproj
+++ b/Source/RazorClassLibrary/RazorClassLibrary.csproj
@@ -14,7 +14,7 @@
         <SupportedPlatform Include="browser" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-rc.2.*" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\SharedClassLibrary\SharedClassLibrary.csproj" />
