--- a/Source/SharedClassLibrary/SharedClassLibrary.csproj
+++ b/Source/SharedClassLibrary/SharedClassLibrary.csproj
@@ -1,10 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Nullable>Enable</Nullable>
         <RootNamespace>TailBlazor.Core</RootNamespace>
+        <ImplicitUsings>Enable</ImplicitUsings>
     </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
-    </ItemGroup>
 </Project>
