--- a/Source/RazorClassLibrary/RazorClassLibrary.csproj
+++ b/Source/RazorClassLibrary/RazorClassLibrary.csproj
@@ -7,9 +7,7 @@
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <IntermediateOutputPath>obj</IntermediateOutputPath>
     </PropertyGroup>
-    <PropertyGroup>
-        <TailwindBuild>true</TailwindBuild>
-    </PropertyGroup>
+    <Import Project="tailwindcss.targets" />
     <ItemGroup>
         <SupportedPlatform Include="browser" />
     </ItemGroup>
@@ -19,16 +17,4 @@
     <ItemGroup>
         <ProjectReference Include="..\SharedClassLibrary\SharedClassLibrary.csproj" />
     </ItemGroup>
-    <Target Name="npm install" BeforeTargets="tailwind build" Inputs="../package.json" Outputs="../node_modules/.install-stamp">
-        <Exec Command="npm -v" ContinueOnError="true">
-            <Output TaskParameter="ExitCode" PropertyName="error" />
-        </Exec>
-        <Error Condition="'$(error)' != '0'" Text="install npm please !" />
-        <Exec Command="npm install" />
-        <Touch Files="../node_modules/.install-stamp" AlwaysCreate="true" />
-    </Target>
-    <Target Name="tailwind build" AfterTargets="AfterBuild" Condition="'$(TailwindBuild)' == 'true'">
-        <Message Text="tailwind build target running..." Importance="high"></Message>
-        <Exec Command="npm run build-wasm" Condition="'$(Configuration)' == 'Debug'"/>
-    </Target>
 </Project>
