remove unneeded settings/tasks

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,8 +3,6 @@
     "bradlc.vscode-tailwindcss",
     "rangav.vscode-thunder-client",
     "ms-dotnettools.blazorwasm-companion",
-    "ms-dotnettools.csharp",
-    "ms-azuretools.vscode-azurefunctions",
-    "azurite.azurite"
+    "ms-dotnettools.csharp"
   ]
 }
