--- a/Templates/Minimal/BlazorWasm/package.json
+++ b/Templates/Minimal/BlazorWasm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailblazorproject",
+  "name": "tailblazorwasm",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,7 +13,7 @@
   "license": "0BSD",
   "devDependencies": {
     "postcss-import": "^14.0.2",
-    "tailwindcss": "^3.0.0-alpha.1"
+    "tailwindcss": "^3.0.0-alpha.2"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.2"
