--- a/Templates/Full/BlazorWasm/BlazorWasm.csproj
+++ b/Templates/Full/BlazorWasm/BlazorWasm.csproj
@@ -3,7 +3,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <RootNamespace>TailBlazor.BlazorWasm</RootNamespace>
+        <RootNamespace>TailBlazorWasm</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
