--- a/StaticWebAppsDemo/FunctionsAPI/FunctionsAPI.csproj
+++ b/StaticWebAppsDemo/FunctionsAPI/FunctionsAPI.csproj
@@ -7,8 +7,10 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.12" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Storage" Version="4.0.4" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.3.0" OutputItemType="Analyzer" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.5.2" />
+        <PackageReference Include="Markdig" Version="0.26.0" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
