--- a/StaticWebAppsDemo/package.json
+++ b/StaticWebAppsDemo/package.json
@@ -4,6 +4,7 @@
   "description": "template for using tailwind css in jit mode with blazor projects",
   "devDependencies": {
     "postcss-import": "^14.0.1",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.0-alpha.2",
     "tailwindcss-debug-screens": "^2.2.0"
   },
