set path to Functions API to shut the extension up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
   "omnisharp.enableImportCompletion": true,
   "omnisharp.enableRoslynAnalyzers": true,
   "csharp.semanticHighlighting.enabled": true,
-  "csharp.suppressHiddenDiagnostics": false
+  "csharp.suppressHiddenDiagnostics": false,
+  "azureFunctions.projectSubpath": "StaticWebAppsDemo/FunctionsAPI"
 }
