--- a/Templates/Full/RazorClassLibrary/tailwindcss.targets
+++ b/Templates/Full/RazorClassLibrary/tailwindcss.targets
@@ -6,15 +6,12 @@
         <Exec Command="npm -v" ContinueOnError="true">
             <Output TaskParameter="ExitCode" PropertyName="error" />
         </Exec>
-        <Error Condition="'$(error)' != '0'" Text="install npm please !" />
+        <Error Condition="'$(error)' != '0'" Text="install node.js please !" />
         <Exec Command="npm install" />
         <Touch Files="../node_modules/.install-stamp" AlwaysCreate="true" />
     </Target>
     <Target Name="tailwind build" AfterTargets="AfterBuild" Condition="'$(TailwindBuild)' == 'true'">
         <Message Text="tailwind build target running..." Importance="high"></Message>
-        <Exec Command="npm run build-server" Condition="'$(Configuration)' == 'Debug'"/>
-        <Exec Command="npm run build-wasm" Condition="'$(Configuration)' == 'Debug'"/>
-        <!-- <Exec Command="npm run build-maui" Condition="'$(Configuration)' == 'Debug'"/>
-        <Exec Command="npm run build-pages" Condition="'$(Configuration)' == 'Debug'"/> -->
+        <Exec Command="npm run build" Condition="'$(Configuration)' == 'Debug'"/>
     </Target>
 </Project>
